--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     width: 280px;
     height: 2px;
     background-color: #072d4e;
-    box-shadow: 0.5px 0.5px 0.5px rgb(99, 235, 245);
+    box-shadow: 0.1px 0.4px 0.3px #fff;
 }
 .member_down{
     margin: 5px;
