--- a/css/style.css
+++ b/css/style.css
@@ -10,64 +10,74 @@
     top:15%;
     left:3%;
 }
-.member{
+.member_info{
     position: absolute;
     top: 18%;
     right: 3%;
-    padding: 15px;
+    padding: 3px;
     color: #fff;
     background-color: #1e3a50;
-    border-radius: 10px;
+    border-radius: 5px;
+    border-right: 0.5px solid rgb(95, 190, 197);
+    border-bottom: 0.5px solid rgb(95, 190, 197);
     box-shadow: 4px 4px 5px rgb(82 82 79);
+}
+.member_top{
+    margin: 10px;
 }
 .line{
     margin: 5px;
-    width: 280px;
     height: 2px;
     background-color: #072d4e;
     box-shadow: 0.1px 0.4px 0.3px #fff;
 }
 .member_down{
-    margin: 5px;
+    margin: 10px;
     display: flex;
     font-weight:bold;
-    justify-content:space-between;
 }
-.member_down .text{
-    color:#fff;
+    .member_down :hover{
+        font-size: 18px;
+    }
+.trans,.member{
+    color:#ffffff;
+    margin-right:24px
 }
-.member_down .img{
+.renew{
     color:rgb(99, 235, 245);
-    width: 75px;
+    margin-left:45px
 }
-
 .content{
     margin:0px auto;
-    width:1000px;
+    width:990px;
     padding: 10px;
 }
-.game_item{
-    margin:0px auto;
+.game_menu{
+    margin:0 auto;
     display: flex;
     justify-content:center;
-    padding: 10px;
+    padding: 15px;
     background-color: #1e3a50;
-}
+}  
 .game_text{
-    width:120px;
-    margin:0 20px;
-    padding: 5px;
+    cursor: pointer;
+    width: 150px;
+    margin: 0 15px;
+    padding: 3px;
     display: flex;
-    justify-content:space-around;
-    align-items:center;
-    border: none;
+    justify-content: center;
+    align-items: center;
     background-color: #035386;
-    color:#fff;
-    font-size:16px; 
-    font-weight:bold; 
+    color: #fff;
 }
-.game{
-    padding: 35px;
+    .game_text:hover{
+        background-color: #0298dd;
+    }
+.game_text img{
+    margin-right:10px;
+}
+.game_item{
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
     background-color: #e5e5e5;
@@ -75,26 +85,34 @@
 .the_game{
     margin: 26px;
     text-align: center;
+    font-size: 16px;
 }
 .game_name{
     color: #035386;
-    margin: 10px;
+    margin: 8px;
 }
 .game_btn1{
-    width: 70%;
-    padding: 5px;
+    margin-right:-3px;
+    width: 65%;
+    padding: 8px;
     border-radius: 5px 0px 0px 5px;
     color: #fff;
-    background-color: #000000;
+    background:linear-gradient(rgb(156, 155, 155),#000);
     border: none;
+    font-size: 16px;
 }
+    .game_btn1:hover{
+        background:linear-gradient(rgb(170, 247, 118),rgb(52, 136, 18));
+    }
 .game_btn2{
-    padding: 5px;
+    width: 32%;
+    padding: 8px;
     border-radius: 0px 5px 5px 0px;
     color: #fff;
-    background-color: #000000;
+    background:linear-gradient(rgb(156, 155, 155),#000);
     border: none;
+    font-size: 16px;
 }
-.button{
-    cursor: pointer;
-}
+    .game_btn2:hover{
+        background:linear-gradient(rgb(241, 199, 106),#fd9104);
+    }
